@@ -1,0 +1,30 @@
+FCKLang.FontsSelectTypeFace = 'Selecteer een lettertype. ';
+FCKLang.FontsDlgButtonWeight = "Lettertype lijndikte";
+FCKLang.FontsDlgNormal      = 'Normaal';
+FCKLang.FontsDlgButtonSize = 'Lettertype grootte';
+FCKLang.FontsDlgBold   = 'Vet';
+FCKLang.FontsToolTip        = 'Lettertype Selectie';
+FCKLang.FontsDlgTitle       = 'Lettertype Selectie Tool';
+FCKLang.FontsDlgButtonOtherSize ='Andere grootte';
+FCKLang.FontsSizeWarning ='Gelieve lettertype grootte op te geven';
+FCKLang.FontsSelectTextWarning = 'Eerst tekst selecteren voor formattering.';
+FCKLang.FontsSelectWarning = 'Selecteer een lettertype';
+FCKLang.FontsRemoveAll='Verwijder formattering';
+FCKLang.FontsRemoveSize='Verwijder grootte';
+FCKLang.FontsRemoveFontFamily='Verwijder lettertype';
+FCKLang.FontsForceRemove = 'Formattering kan niet of gedeeltelijk verwijderd worden.  Het is mogelijk om het resultaat te forceren.';
+FCKLang.FontsAttemptRemove = 'Tracht de formattering te verwijderen: ';
+FCKLang.fontsHelp           = 'Met deze tool kan je een lettertype, de grootte en de lijndikte selecteren.' 
+                           + ' Voor een andere grootte dan de verstek waarde, gebruik het veld: "Andere grootte".'
+                           + ' Eens een lettertype toegekend is, kan je de tekst bewerken en de eigenschappen van het lettertype bepalen.';   
+                           
+	                        
+
+//Color Options Menu
+
+FCKLang.FontsColorOptions = 'Kleur Opties';   
+FCKLang.FontsColorOptionsFGColor= 'Originele tekstkleur';
+FCKLang.FontsColorOptionsBGColor= 'Originele achtergrondkleur';
+FCKLang.FontsColorOptionsOriginalColors= 'Originele tekst en achtergrond';     
+FCKLang.FontsColorOptionsRemoveColors='Verwijder kleur';
+
