@@ -1,4 +1,4 @@
-rev 13-Aug_13-08_47
+rev 13-Aug_15-21_24
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -237,3 +237,6 @@ Added language variable to image dialog's align list for "remove alignment"
 
 13 Aug
 Preserve plain text samba share syntax
+
+15 Aug
+Dutch language updates for fckeditor lang.nl.js and fonts/lang/nl.js
